Fix summary view not spanning viewport width on mobile

--- a/styles/_app.scss
+++ b/styles/_app.scss
@@ -70,7 +70,7 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: stretch;
   text-align: left;
   @media (min-width: $app-hybrid-max-width) {
     flex-direction: row;
